force-app/main/default/objects/Absence__c/Absence__c.object-meta.xml
<CustomObject>
    <label>Absence</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Absence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Absences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>