force-app/main/default/objects/Absence__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>