force-app/main/default/objects/Absence__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Absences</relationshipLabel>
    <relationshipName>Absences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>