force-app/main/default/objects/Absence__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Unapproved</fullName>
                <isActive>false</isActive>
                <label>Unapproved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>