force-app/main/default/objects/Absence__c/fields/Valid_Absence_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Valid_Absence_Duration_Months__c</fullName>
    <label>Valid Absence Duration (Months)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>